--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,22 +1,14 @@
 {
+  "extends": "../tsconfig.base.json",
   "compilerOptions": {
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "target": "es5",
+    /* Node environment */
     "lib": ["es2022"],
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "moduleDetection": "force",
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
-    "strict": true,
-    "noUncheckedIndexedAccess": true,
-    "noImplicitOverride": true,
+
+    /* For transpiling with TypeScript: */
     "module": "NodeNext",
     "outDir": "build",
-    "sourceMap": false,
+    "sourceMap": false
   },
-  "include": [
-    "src/**/*.ts"
-  ],
+  "include": ["src/**/*.ts"]
 }
+
