updates for typescript and npm workspace added

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,8 +7,9 @@
     /* For transpiling with TypeScript: */
     "module": "NodeNext",
     "outDir": "build",
-    "sourceMap": false
+    "sourceMap": false,
+
+    "baseUrl": "."
   },
   "include": ["src/**/*.ts"]
 }
-
