--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,13 @@
   "license": "ISC",
   "main": "index.ts",
   "scripts": {
-    "build": "npm run clean && tsc",
+    "build": "npm run clean && tsc --project tsconfig.json",
     "clean": "rm -rf build",
     "clean-all": "rm -rf node_modules build",
     "start": "npm run build && node build/index.js"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
-    "typescript": "^5.8.3"
+    "@types/node": "^24.1.0"
   },
   "dependencies": {
     "fastify": "^5.4.0"
