--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -1,8 +1,8 @@
-version: "3.7"
+version: '3.7'
 
 services:
   mongo:
-    image: mongo:noble
+    image: mongo
     restart: always
     container_name: todosdb
     ports:
