--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "db"
   ],
   "scripts": {
-    "clean": "rm -rf db/db_data",
-    "clean-all": "rm -rf node_modules db/db_data",
+    "clean": "sudo rm -rf db/db_data",
+    "clean-all": "sudo rm -rf node_modules db/db_data",
     "format": "prettier --write .",
     "db:start": "docker compose -f ./db/docker-compose.yml up -d",
     "db:stop": "docker compose -f ./db/docker-compose.yml down  --rmi local",
@@ -30,4 +30,3 @@
     "url": "https://github.com/BoltPlays/todos/issues"
   }
 }
-
