--- a/db/docker-compose.yml
+++ b/db/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: admin
       MONGO_INITDB_DATABASE: todos
     volumes:
-      - ./db_data:/data/db/
+      # - ./db_data:/data/db/ # uncomment to persist data
       - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
 
 volumes:
