--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,12 +2,13 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     /* Node environment */
-    "lib": ["es2022"],
+    "lib": [
+      "es2022"
+    ],
     /* For transpiling with TypeScript: */
     "module": "NodeNext",
     "outDir": "build",
     "sourceMap": false,
     "baseUrl": "."
   },
-  "include": ["src/**/*.ts"]
 }
