--- a/server/package.json
+++ b/server/package.json
@@ -8,14 +8,16 @@
   "main": "index.ts",
   "scripts": {
     "build": "npm run clean && tsc",
-    "build:dev": "npm run clean && tsc --watch",
-    "dev": "nodemon build/server.js",
+    "build:dev": "tsc --watch",
+    "start:dev": "nodemon build/server.js",
+    "dev": "concurrently 'npm run build:dev' 'npm run start:dev'",
     "clean": "rm -rf build",
     "start": "npm run build && node build/server.js",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
+    "concurrently": "^9.2.0",
     "nodemon": "^3.1.10"
   },
   "dependencies": {
