--- a/learning/package.json
+++ b/learning/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "server",
+  "name": "learning",
   "version": "1.0.0",
   "type": "module",
   "author": "Archie Newman",
-  "description": "server for managing todos",
+  "description": "learning stuffs",
   "license": "ISC",
   "main": "index.ts",
   "scripts": {
     "build": "npm run clean && tsc",
     "build:dev": "tsc --watch",
-    "start:dev": "nodemon build/server.js",
-    "start:test": "nodemon build/learning/test.js",
-    "learning": "concurrently 'npm run build:dev' 'npm run start:test'",
+    "start:dev": "nodemon build/index.js",
     "dev": "concurrently 'npm run build:dev' 'npm run start:dev'",
     "clean": "rm -rf build",
-    "start": "npm run build && node build/server.js",
+    "start": "npm run build && node build/index.js",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
     "concurrently": "^9.2.0",
     "nodemon": "^3.1.10"
-  },
-  "dependencies": {
-    "@fastify/mongodb": "^9.0.2",
-    "fastify": "^5.4.0"
   }
 }
